# xcpc-tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  README.zh-CN.md  netlify.toml  package.json
apps/service/: Makefile  README.md  pyproject.toml
apps/service/src/xcpc_vp_gather/: __init__.py  cli.py  config.py  main.py
apps/service/src/xcpc_vp_gather/api/: app.py
apps/service/src/xcpc_vp_gather/core/: ids.py  time.py
apps/service/src/xcpc_vp_gather/db/: connection.py  init_db.py  schema.sql
apps/service/src/xcpc_vp_gather/models/: __init__.py  provider_models.py
apps/service/src/xcpc_vp_gather/providers/: base.py  registry.py
apps/service/src/xcpc_vp_gather/providers/codeforces/: __init__.py  api_client.py  provider.py
apps/service/src/xcpc_vp_gather/services/: config_io.py  contest_summaries.py  contests.py  coverage.py  members.py  repository.py  sync.py
apps/service/tests/: test_cli.py  test_codeforces_provider.py  test_schema_init.py  test_sync_and_coverage.py
catalog/: README.md  default-catalog.min.json
data/: codeforces-problems.json  contests.json  final.json  qoj-contests-export-a.json  qoj-problems-a.json  qoj-problems-b.json  result.json
docs/: architecture.md  frontend-first-pivot.md  mvp-design.md  project-plan.md
schemas/: README.md  catalog-bundle.schema.json  codeforces-import.schema.json  contest.schema.json  qoj-import.schema.json
scripts/: README.md  apply-codeforces-undated-years.mjs  bootstrap  browser-fetch-contests.mjs  browser-fetch-current-contest-problems.mjs  browser-fetch-qoj-problems.mjs  catalog-lib.ts  (+19 more)
(+56 files in other folders)
